# repo-guardian-melissa

./: .gitignore  .pre-commit-config.yaml  LICENSE  PC1-Instrucciones.md  README.md  Roadmap.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  draft-release.yml
docs/: benchmarks.md  commands.md  context-diagram.puml  contributing.md  dag.mmd  daily-log-2023-11-09.md  day6.md  development-workflow.md  index.md  tui_wireframe.md
docs/architecture/: overview.md
docs/daily-logs/: day1.md  day2.md  day3.md  day4.md  day6.md  day7.md
docs/demo/: tui_demo.cast
docs/user-guide/: installation.md  quick-start.md
features/: object_corruption.feature  placeholder.feature
features/steps/: object_corruption_steps.py  placeholder_steps.py
fixtures/corrupt-blob.git/: README.md
fixtures/pack-corrupt.git/: README.md
fixtures/pack-corrupt.git/objects/pack/: pack-corrupt.idx  pack-corrupt.pack
scripts/: bench.py  create_corrupt_fixtures.py  create_corrupted_packfile.py  guardian  post-merge  record_demo.sh  scan-repo.sh
src/guardian/: __init__.py  cli.py  dag_builder.py  jw_detector.py  object_scanner.py  repair.py  tui.py  utils.py
tests/: test_cli.py  test_cli_complete.py  test_completions.py  test_dag_builder.py  test_jw_detector.py  test_object_scanner.py  test_object_scanner_additional.py  test_packfile.py  test_placeholder.py  test_tui.py  test_tui_basic.py  test_wrapper_script.py
